force-app/main/default/objects/Email_Logging__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Attachment_Logging__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachment Logging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Header_Logging__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When enabled, inbound email headers are stored on the email object.</description>
        <label>Header Logging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spam_Logging__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spam_Logging</label>
        <type>Checkbox</type>
    </fields>
    <label>Email Logging</label>
</CustomObject>