force-app/main/default/objects/Email_Logging__c/fields/Attachment_Limit_Logging__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Limit_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attachment Limit Logging</label>
    <type>Checkbox</type>
</CustomField>